# tnnl

./: .gitignore  COORDINATION_SERVER_PROGRESS.md  LICENSE  NEXT_STEPS.md  PHASE_2_STATUS.md  PROGRESS.md  QUICKSTART.md  README.md  RELEASE_SETUP.md  WEBSOCKET_STATUS.md  bump-version.sh  client.html  index.html  install-build.sh  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build-coordination-server.yml  release.yml
backend/coordination-server/: .env.example  Cargo.toml  README.md  supabase-schema.sql
backend/coordination-server/migrations/: 20250107000001_initial_schema.down.sql  20250107000001_initial_schema.up.sql  20250107000002_add_ssh_keys.down.sql  20250107000002_add_ssh_keys.up.sql
backend/coordination-server/src/: auth.rs  db.rs  main.rs  nginx.rs  ssh_keys.rs  tunnel.rs
deployment/: README.md  deploy.sh  nginx-tnnl.conf  tnnl-coordination.service  update.sh
landing/: DEPLOYMENT_NOTES.md  README.md  app.js  app.test.js  index.html  privacy.html  style.css  terms.html
scripts/: setup-ssh-server.sh
src/: main.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: coordination_client.rs  input_handler.rs  lib.rs  main.rs  screen_capture.rs  ssh_tunnel.rs  webrtc_peer.rs  websocket_server.rs  window_manager.rs  workos_auth.rs
