[package]
name = "tnnl"
version = "0.1.3"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"
once_cell = "1.20"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

# For SSH tunnel process management (Unix)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

# For screen capture - high-performance with ScreenCaptureKit
scap = "0.0.8"
parking_lot = "0.12"
image = "0.25"

# For WebSocket streaming
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
bytes = "1"

# For macOS window management and capture
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

# For video encoding (Phase 2)
# openh264 = "0.6"  # H.264 codec - will add when needed

[lib]
name = "tnnl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
